REF pivot column order tests

--- a/notebooks/verifyRef.ipynb
+++ b/notebooks/verifyRef.ipynb
@@ -12,51 +12,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, 0), (1, 1)]\n"
+      "[[ 3 -2  6  0  1]\n",
+      " [ 0  0  0 -3  5]\n",
+      " [ 0  0  2  7  5]\n",
+      " [ 0  0  0  0  0]]\n",
+      "is not in echelon form\n",
+      "row pivot colum order rule\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "def main():\n",
+    "from testMatricies import getTestMatrices\n",
     "\n",
-    "    matrix = np.array(\n",
-    "        [\n",
-    "            [8, 1, 7],\n",
-    "            [0, 5, -3],\n",
-    "            [0, 0, 0]\n",
-    "        ]\n",
-    "    )\n",
-    "\n",
-    "    if verifyZeroRowOrder(matrix) == False:\n",
-    "        print(matrix[0])\n",
-    "        print(\"is not in echelon form\")\n",
-    "\n",
-    "    verifyLeadingEntries(matrix)\n",
-    "\n",
-    "def verifyLeadingEntries(matrix):\n",
-    "\n",
-    "    pivot_indexes = []\n",
-    "\n",
-    "    rows = matrix.shape[0]\n",
-    "    for i in range(0, rows):\n",
-    "        row = matrix[i]\n",
-    "        for j in range(0, len(row)):\n",
-    "            elem = row[j]\n",
-    "            if elem != 0:\n",
-    "                pivot_indexes.append((i, j))\n",
-    "                break\n",
-    "\n",
-    "    print(pivot_indexes)\n",
-    "    return pivot_indexes\n",
     "\n",
     "\n",
     "def verifyZeroRowOrder(matrix):\n",
@@ -86,6 +69,62 @@
     "            return False\n",
     "    return True\n",
     "\n",
+    "def getPivotIndexs(matrix):\n",
+    "\n",
+    "    pivot_indexes = []\n",
+    "    rows = matrix.shape[0]\n",
+    "\n",
+    "    for i in range(0, rows):\n",
+    "        row = matrix[i]\n",
+    "        for j in range(0, len(row)):\n",
+    "            elem = row[j]\n",
+    "            if elem != 0:\n",
+    "                pivot_indexes.append((i, j))\n",
+    "                break\n",
+    "\n",
+    "    return pivot_indexes\n",
+    "\n",
+    "\n",
+    "def verifyLeadingEntries(matrix):\n",
+    "    pivot_indexes = getPivotIndexs(matrix)\n",
+    "\n",
+    "    pivotColums = []\n",
+    "    for elem in pivot_indexes:\n",
+    "        pivotColums.append(elem[1])\n",
+    "\n",
+    "\n",
+    "    for i in range(0, len(pivot_indexes)):\n",
+    "        index = pivot_indexes[i]\n",
+    "        # skip first row\n",
+    "        if index[0] != 0:\n",
+    "            curCol = index[1]\n",
+    "            prevCol = pivot_indexes[i-1][1] \n",
+    "\n",
+    "            if curCol <= prevCol:\n",
+    "                return False\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "def runTests(matrix):\n",
+    "    print(matrix)\n",
+    "\n",
+    "    if verifyZeroRowOrder(matrix) == False:\n",
+    "        print(\"is not in echelon form\")\n",
+    "        print(\"zero row rule\")\n",
+    "        return\n",
+    "\n",
+    "\n",
+    "    if verifyLeadingEntries(matrix) == False:\n",
+    "        print(\"is not in echelon form\")\n",
+    "        print(\"row pivot colum order rule\")\n",
+    "        return\n",
+    "\n",
+    "            \n",
+    "def main():\n",
+    "    # ref\n",
+    "    testMatrices = getTestMatrices()\n",
+    "    matrix = testMatrices[\"breakPivotCol\"]\n",
+    "    runTests(matrix)\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    main()"
