REF pivot column order tests

--- a/notebooks/verifyRef.ipynb
+++ b/notebooks/verifyRef.ipynb
@@ -12,13 +12,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -39,8 +32,6 @@
     "import numpy as np\n",
     "\n",
     "from testMatricies import getTestMatrices\n",
-    "\n",
-    "\n",
     "\n",
     "def verifyZeroRowOrder(matrix):\n",
     "\n",
@@ -84,8 +75,7 @@
     "\n",
     "    return pivot_indexes\n",
     "\n",
-    "\n",
-    "def verifyLeadingEntries(matrix):\n",
+    "def verifyColumnOrder(matrix):\n",
     "    pivot_indexes = getPivotIndexs(matrix)\n",
     "\n",
     "    pivotColums = []\n",
@@ -104,7 +94,6 @@
     "                return False\n",
     "    return True\n",
     "\n",
-    "\n",
     "def runTests(matrix):\n",
     "    print(matrix)\n",
     "\n",
@@ -114,11 +103,12 @@
     "        return\n",
     "\n",
     "\n",
-    "    if verifyLeadingEntries(matrix) == False:\n",
+    "    if verifyColumnOrder(matrix) == False:\n",
     "        print(\"is not in echelon form\")\n",
     "        print(\"row pivot colum order rule\")\n",
     "        return\n",
     "\n",
+    "    print(\"is in row echelon form\")\n",
     "            \n",
     "def main():\n",
     "    # ref\n",
